# cmake-sdl

./: .gitignore  CMakeLists.txt  README.md  notes.txt  windows-toolchain.cmake
cmake/SDL_image/: CMakeLists.txt
cmake/zlib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Component/: Graphic.cpp  Graphic.hpp  PlayerControlled.cpp  PlayerControlled.hpp  Position.cpp  Position.hpp
src/Core/: Unique.hpp  Vulkan.cpp  Vulkan.hpp  Vulkan_debug.cpp  Vulkan_utils.cpp  Window.cpp  Window.hpp
src/Manager/: Component.hpp  Entity.hpp
src/Manager/Resource/: Texture.cpp  Texture.hpp
src/Shader/: shader.frag.glsl  shader.vert  vert.spv
src/System/: Camera.hpp  Input.cpp  Input.hpp  Render.cpp  Render.hpp
